# tree-sitter-cpp-api

./: .clang-format  .gitignore  .gitmodules  CMakeLists.txt  Doxyfile-mcss  LICENSE  README.md  annotated.html  classts_1_1Cursor.html  classts_1_1EditException.html  classts_1_1Language.html  classts_1_1MultilineEditException.html  classts_1_1Node.html  classts_1_1NullNodeException.html  classts_1_1OverlappingEditException.html  classts_1_1ParseFailureException.html  classts_1_1Parser.html  classts_1_1ParserLanguageException.html  classts_1_1Query.html  classts_1_1QueryCursor.html  classts_1_1QueryException.html  classts_1_1Tree.html  classts_1_1TreeSitterException.html  classts_1_1ZeroSizedEditException.html  files.html  index.html  mcss-conf.py  modules.html  namespaces.html  namespacets.html  pages.html  searchdata-v1.js  structts_1_1AppliedEdit.html  structts_1_1Capture.html  structts_1_1Edit.html  structts_1_1EditResult.html  structts_1_1Location.html  structts_1_1Match.html  structts_1_1Point.html  structts_1_1Range.html  (+1 more)
.github/workflows/: deploy_docs.yml  install_packages.sh  tree-sitter.yml
cmake/: CodeCoverage.cmake  FindPlantuml.cmake  FindSanitizers.cmake  FindTreeSitter.cmake  FindTreeSitterLua.cmake
include/tree_sitter/: tree_sitter.hpp
include/ts/: tree_sitter.hpp
scripts/: _common.sh  _env.sh  build.sh  check_format.sh  docs.sh  install_hooks.sh  lint.sh  run-clang-format.py  setup.sh  test.sh  test_coverage.sh  upload_coverage.sh
scripts/hooks/: pre-commit
src/: CMakeLists.txt  edit_helper.cpp  index.md  tree_sitter.cpp
tests/: CMakeLists.txt  unit_tests.cpp
tests/docs/: CMakeLists.txt  example.cpp  main.cpp
